Update base url

--- a/src/components/base.astro
+++ b/src/components/base.astro
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<link rel="icon" href="/notebooks/favicon.svg" type="image/svg+xml">
+		<link rel="icon" href="/Notebook-Archive/favicon.svg" type="image/svg+xml">
 		<meta name="theme-color" media="(prefers-color-scheme: light)" content="#ECECEC">
 		<meta name="theme-color" media="(prefers-color-scheme: dark)"  content="#222">
 		<meta name="robots" content="noindex">
