Fix relative urls

--- a/src/components/notebook-number.astro
+++ b/src/components/notebook-number.astro
@@ -5,7 +5,7 @@ const { number } = Astro.props
 ---
 
 <div class="container">
-	<a href="./">
+	<a href="../">
 		<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 14" role="presentation">
 			<path class="arrow-stem" d="M14.69 7.7V6.21H2.99V7.7z"/>
 			<path d="m6.85 13 1.04-1.04L3.61 7.7V6.21l4.28-4.28L6.85.91.81 6.95z"/>
