Move titles to head-slot
(allows per-page titling and other head tags)

--- a/src/components/base.astro
+++ b/src/components/base.astro
@@ -8,7 +8,7 @@
 		<meta name="theme-color" media="(prefers-color-scheme: light)" content="#ECECEC">
 		<meta name="theme-color" media="(prefers-color-scheme: dark)"  content="#222">
 		<meta name="robots" content="noindex">
-		<title>Notebook Archive</title>
+		<slot name="head"/>
 		<style is:global>
 			:root
 			{
