--- a/src/pages/[notebook].astro
+++ b/src/pages/[notebook].astro
@@ -24,6 +24,9 @@ const totalPages = pages.length
 ---
 
 <Base>
+	
+	<title slot="head">Notebook #{notebook.index}</title>
+
 	<div class="container">
 		<header>
 			<NotebookNumber number={notebook.index}/>
