--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,6 +11,7 @@ const notebooks = getAllNotebooks()
 ---
 
 <Base>
+	<title slot="head">Notebook Archive</title>
 	<header>
 		<Logo/>
 		<SortButton sortElementId="all-notebooks"/>
