--- a/src/components/meta-social-share-image.astro
+++ b/src/components/meta-social-share-image.astro
@@ -23,6 +23,6 @@ await writeToPng(assetFolder, filename, svg, {
 <meta property="og:title" content={`Notebook #${index}`}/>
 <meta property="og:type" content="website"/>
 <meta property="og:image" content={`${import.meta.env.BASE_URL}${assetFolder}/${filename}`}/>
-<meta property="og:image:alt" content="A shiny red apple with a bite taken out" />
-<meta property="og:url" content={`${import.meta.env.BASE_URL}${index}/`} />
-<meta property="og:site_name" content="Personal Notebook Archive" />
+<meta property="og:image:alt" content={`The cover of notebook number ${index}.`}/>
+<meta property="og:url" content={`${import.meta.env.BASE_URL}${index}/`}/>
+<meta property="og:site_name" content="Personal Notebook Archive"/>
