Use fallback font for social images
(fixes images being rendered with no text during Github build)

--- a/src/components/meta-social-share-image.astro
+++ b/src/components/meta-social-share-image.astro
@@ -13,8 +13,9 @@ await writeToPng(assetFolder, filename, svg, {
 		value: 1200,
 	},
 	font: {
-		loadSystemFonts: true,
-		defaultFontFamily: 'Futura',
+		fontFiles: ['./notebooks/assets/WorkSans-Bold.ttf'],
+		loadSystemFonts: false,
+		defaultFontFamily: 'Work Sans',
 	},
 })
 ---
