--- a/src/pages/[notebook].astro
+++ b/src/pages/[notebook].astro
@@ -94,4 +94,12 @@ const totalPages = pages.length
 			gap: 20px;
 		}
 	}
+
+	@media (max-width: 500px)
+	{
+		.container
+		{
+			min-height: calc(75vh);
+		}
+	}
 </style>
